# uniprojectsdn

./: ProjectHome.md
GLoLoP/: aufgabe6-2.pl  einstein.pl  essen.pl  fakultaet.pl  ggt.pl  listen.pl  new_quicksort.pl  numgen.pl  ordered.pl  raetsel.pl  sudoku.pl.alt  sudoku_meins.pl  unk.pl
PFP/: Teilnehmer.java
PFP/ue02/: ArraySummenTest.java  HalloExecutor.java  HalloRunner.java  HalloThread.java  MyCallable.java
SP/contest/: bla  fdsort2.c.old
advpt/blackjack/: Main.cpp  Makefile
advpt/ex01/: Makefile  main10.cpp  main11.cpp  main3.cpp  main9.cpp
advpt/ex02/: Makefile  main12.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
advpt/ex03/: bla.cpp  main5.cpp  main7.cpp  main8.cpp
advpt/ex04/: Makefile  main10.cpp  main2.cpp  main3.cpp  main7.cpp  main8.cpp  main9.cpp
advpt/ex05/: Makefile  main4.cpp  main5.cpp  main8.cpp
bachelor/GLoLoP/: ableitung.pl  fibonacci.pl  flatten.pl  nochmallisten.pl  quicksort.pl  regeln.pl  sudoku.pl  summeeinerliste.pl  verwandtschaft.pl
bachelor/glolop/: aufgabe8-3.pl  bubblesort.pl  damen.pl  kanten.pl  kreuzkringel.pl  listenfunktionen.pl  quicksort_olo.pl  selectionsort.pl  tree.pl
bachelor/glolop2/: efface.pl  fuenffelder.pl  laengeliste.pl  listreverse.pl  word.pl
bachelor/pfp/: Picasso.java  Wettkampf.java
bachelor/pfp2/: Leinwand.java  Olympia.java
bachelor/praktikum_vortrag/: beamerLMEtitleback.eps  danke.aiff  vortrag.dvi
ddwuegw/: BWmask.mat  approach2.m  detect_zellen.m  regiongrowing.m
dmip/ex00/: flipMatrix.m  mysession.mat  test1.data
dmip/ex01/: ex01.m  fourier_transform.m  opti4.m
dmip/ex02/: ex02_1.m  exercise2_frame.m
dmip/ex03/: defect_interpolation.m  mask.mat
dmip/ex04/: ex04.m  mr12.tif
dmip/ex05/: ransacline_ex.m
dmip/ex06/: exercise6.m
intropr/: kmeans.m  separately.m  together.m
intropr/ex08/: ex08.m
intropr/ex10/: eval_gauss.m  ex10.m
intropr/ex12-14/: ex12.m  ex14.m
intropr/ex15-16/: ex15.m  ex16.m
intropr/ex18/: compute_moments.m  ex18.m
intropr/ex19-20/: ex20.m
intropr/ex21/: WaveletTest.m  dht2.m  mra2.m  mrs2.m
intropr/ex22-23/: exercises.m
intropr/ex24/: eval_gauss.m  ex24.m
master/ks1/: AlphametikSolver.java
master/mw/: mwcc.sh
master/project/FastICP/: CMakeLists.txt  DataGenerator.cxx  DataGenerator.h  FastICPPlugin.cxx  FastICPPlugin.h  FastICPPluginFactory.cxx  FastICPPluginFactory.h  FastICPWidget.cxx  FastICPWidget.h  FastICPWidget.ui  ICP.cu  ICP.h  ICP.txx  ICPKernel.h  Instantiations.cxx  KinectDataManager.cu  KinectDataManager.cxx  KinectDataManager.h  KinectDataManagerKernel.h  RBC.cu  RBC.h  RBC.txx  RBCKernel.h  RepGPU.h  VolumeManager.cu  VolumeManager.cxx  VolumeManager.h  VolumeManager.txx  VolumeManagerKernel.h  defs.h
master/project/ImprovedStitching/: CMakeLists.txt  ICP.cu  ICP.h  ICP.txx  ICPKernel.h  ImprovedStitchingPlugin.cxx  ImprovedStitchingPlugin.h  ImprovedStitchingPluginFactory.cxx  ImprovedStitchingPluginFactory.h  ImprovedStitchingWidget.cxx  ImprovedStitchingWidget.h  ImprovedStitchingWidget.ui  Instantiations.cxx  KinectDataManager.cxx  KinectDataManager.h  RBC.cu  RBC.h  RBC.txx  VolumeManager.cu  VolumeManager.cxx  VolumeManager.h  VolumeManagerKernel.h  defs.h
master/project/Reconstruction/: CMakeLists.txt  ICP.h  RBC.h  RBCOneShot.h  ReconstructionPlugin.cxx  ReconstructionPlugin.h  ReconstructionPluginFactory.cxx  ReconstructionPluginFactory.h  ReconstructionWidget.cxx  ReconstructionWidget.h  ReconstructionWidget.ui
master/seminar/: CMakeLists.txt  ClosestPointFinder.h  ClosestPointFinderBruteForceCPU.cxx  ClosestPointFinderBruteForceCPU.h  ClosestPointFinderBruteForceGPU.cu  ClosestPointFinderBruteForceGPU.cxx  ClosestPointFinderBruteForceGPU.h  ClosestPointFinderBruteForceGPUKernel.h  ClosestPointFinderRBCCPU.cxx  ClosestPointFinderRBCCPU.h  ClosestPointFinderRBCGPU.cxx  ClosestPointFinderRBCGPU.h  ClosestPointFinderRBCGPU2.cxx  ClosestPointFinderRBCGPU2.h  CudaTest.cu  CudaTestKernel.h  ExtendedICPTransform.cxx  ExtendedICPTransform.h  StitchingPlugin.cu  StitchingPlugin.cxx  StitchingPlugin.h  StitchingPluginFactory.h  StitchingPluginKernel.h  StitchingWidget.cxx  StitchingWidget.h  StitchingWidget.ui  TransformationOnGPU.cu  TransformationOnGPUKernel.h  defs.h
master/seminar/FastStitching/: CMakeLists.txt  CUDAOpenGLVisualizationWidget.cxx  CUDAOpenGLVisualizationWidget.h  CUDARangeToWorldPlugin.cxx  CUDARangeToWorldPlugin.h  CUDARangeToWorldPluginFactory.h  CUDAStitcher.cxx  CUDAStitcher.h  ClosestPointFinder.h  ClosestPointFinderBruteForceGPU.cxx  ClosestPointFinderBruteForceGPU.h  ClosestPointFinderRBCGPU.cxx  ClosestPointFinderRBCGPU.h  ExtendedICPTransform.cxx  ExtendedICPTransform.h  FastStitching.cu  FastStitchingKernel.h  FastStitchingPlugin.cu  FastStitchingPlugin.cxx  FastStitchingPlugin.h  FastStitchingPluginFactory.cxx  FastStitchingPluginFactory.h  FastStitchingPluginKernel.h  FastStitchingWidget.cxx  FastStitchingWidget.h  FastStitchingWidget.ui  defs.h
master/seminar/Stitching/: CMakeLists.txt  ClosestPointFinder.h  ClosestPointFinderBruteForceGPU.cxx  ClosestPointFinderBruteForceGPU.h  ClosestPointFinderRBCCPU.cxx  ClosestPointFinderRBCCPU.h  ClosestPointFinderRBCCayton.cxx  ClosestPointFinderRBCCayton.h  ClosestPointFinderRBCExactGPU.cxx  ClosestPointFinderRBCExactGPU.h  ClosestPointFinderRBCGPU.cxx  ClosestPointFinderRBCGPU.h  ExtendedICPTransform.cxx  ExtendedICPTransform.h  StitchingPlugin.cu  StitchingPlugin.cxx  StitchingPlugin.h  StitchingPluginFactory.cxx  StitchingPluginKernel.h  StitchingWidget.ui  defs.h
master/seminar/Stitching/rbc/: brute.cu  defsRBC.h  kernelWrap.cu  kernels.cu  kernels.h  rbc.cu  rbc.h  sKernel.cu  sKernel.h  sKernelWrap.cu  utils.cu  utils.h  utilsGPU.cu  utilsGPU.h
misc/TextFinder/: TextFinder.pro  main.cpp  textfinder.cpp  textfinder.h  (+1 more)
pr/: ex03.m  kNearestNeighbors.m  optimization_tests.m
praktikum_vortrag/: .exrc  Makefile  beamerLMEtitleback.fig  beamercolorthemeLMEinner.sty  beamercolorthemeLMEouter.sty  beamerinnerthemeLME.sty  beamerouterthemeLME.sty  commands.own  markov.tex  vortrag.aux  vortrag.out  vortrag.toc
(+1377 files in other folders)
